# messanger

./: .dockerignore  .gitignore  README.md  alembic.ini  conftest.py  docker-compose.yml  fix_device_enum.sql  pyproject.toml  test_e2ee_keys.py  update_alembic_version.py
.github/workflows/: ci-cd.yml
frontend/: index.html
frontend/js/: app.js  crypto.js  devices.js
frontend/static/: styles.css
src/: .env  Dockerfile  entrypoint.sh
src/app/: config.py  database.py  main.py
src/app/chat/: crud.py  exceptions.py  models.py  router.py  schemas.py
src/app/notifications/: router.py
src/app/uploads/: router.py
src/app/users/: auth.py  crud.py  dependensies.py  devices_router.py  exceptions.py  models.py  router.py  schemas.py  users_router.py  verification.py
src/app/utils/: auth.py  email.py  jwt.py  rate_limit.py
src/app/websocket/: manager.py
src/migration/: env.py
src/migration/versions/: 0001_add_multi_device_support.py  0d0b0e81f548_merge_conflict.py  17de3ff682da_merge_conflicting_heads.py  20260427_195504_add_user_devices_table.py  20260427_200000_add_updated_at_to_user_devices.py  20260427_210000_add_pending_status_to_device_enum.py  20260430_005403_add_multi_device_support.py  20260430_add_group_chat_photo.py  20260507_add_email_verification.py  242cdfc4c3a2_add_user_profile_fields_and_friendships.py  2440d8f05686_.py  26e91c10241c_merge_conflict.py  2b5581546a75_revision_2.py  307e7fe46903_merge_conflict_heads.py  33587550a3d9_.py  495a666f95b8_add_verification_jti_and_sent_at.py  6407ade23dda_add_message_reply_fields.py  8afb026fc2bb_merge_conflict.py  af25278d05ab_add_message_editing_pinning_and_.py  bed10c4ca6de_add_chats_table.py  c76a3cea920e_add_message_status_chat_last_message_.py  cfdfc9014ca8_add_group_chats_support.py  d42a38bf91eb_inital_revision.py  e6b2145828ca_.py  e8c1a7a12f01_add_e2ee_key_and_payload_fields.py  eeab2498aa50_.py
tests/: __init__.py  test_api.py  test_auth.py  test_crud.py  test_websocket.py
