[project]
name = "back-messanger"
version = "0.1.0"
description = ""
authors = [
    {name = "RofLeR8",email = "mister.kabalin@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",

]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/app"]
omit = ["tests/*", "*/migrations/*", "*/versions/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
# E712: SQLAlchemy columns require `== False` / `== True`, not `not column`
ignore = ["E712"]
